--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <source id="Video" src="blueplanet.mp4" type="video/mp4">
     </video>
     <img id="logo" src="blue_planet_tech-removebg-preview.png" alt="">
+<a href="page2.html"><button id="enter">Enter!</button></a>
 </body>
 </html>
 
@@ -25,4 +26,17 @@
         height: 200px;
         left: -170px;
     }
+
+    #enter{
+        position: absolute;
+        padding: 14px 40px;
+        background-color: #BB86FC;
+        border-radius: 8px;
+        font-family: 'Sono', sans-serif;
+        top: 550px;
+        right: 625px;
+    }
+
+    @import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
+
 </style>
