--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </video>
     <img id="logo" src="blue_planet_tech-removebg-preview.png" alt="">
 <a href="page2.html"><button id="enter">Enter!</button></a>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </body>
 </html>
 
