--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <video width="500" height="500" controls>
+    <video width="500" height="300" controls>
         <source id="Video" src="blueplanet.mp4" type="video/mp4">
     </video>
     <img id="logo" src="blue_planet_tech-removebg-preview.png" alt="">
@@ -17,6 +17,13 @@
 </html>
 
 <style>
+    
+    #presentation{
+        position: absolute;
+        top: 150px;
+    }
+
+    
     body{
         background-color: #121212;
     }
