--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <video width="500" height="300" controls>
+    <video width="500px" height="300px" controls>
         <source id="Video" src="blueplanet.mp4" type="video/mp4">
     </video>
     <img id="logo" src="blue_planet_tech-removebg-preview.png" alt="">
