--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     #presentation{
         position: absolute;
-        top: 300px;
+        top: 200px;
     }
 
     
@@ -32,7 +32,7 @@
         position: absolute;
         top: -40px;
         height: 200px;
-        left: -170px;
+        right: 0px;
     }
 
     #enter{
